--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,13 @@
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+main {
+    flex: 1 0 auto;
+}
 .contacto {
 	background-color: #EDEDED;
-	height: 100vh;
 	padding-top: 50px;
 	padding-bottom: 100px;
 }
@@ -18,7 +25,6 @@
 .contacto .contactanos{
     padding-left: 40px;
 }
-
 .contacto .contactanos h6{
     margin-bottom: 15px;
 }
