--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,9 @@ main {
 /*About me*/
 header{
 	background-image: url("../assets/img/bg.jpg");
-	background-size: cover;
+	background-size: 350%;
 	background-repeat: no-repeat;
+  background-position: center;
 	top: 0;
 	height: 100vh;
 }
@@ -47,4 +48,9 @@ header h5{
 }
 h1,h5,h6{
 	text-transform: uppercase;
+}
+@media screen and (min-width: 600px){
+  header{
+    background-size: cover;
+  }
 }
