--- a/css/style.css
+++ b/css/style.css
@@ -34,12 +34,12 @@ header h5{
 	width: 40px;
 	margin-bottom: 45px;
 }
-#padding-img{
-	padding: 0;
+.padding-img{
+	padding: 0 !important;
 }
-#size-img{
-	height: 220px;
-	width: 326px;
+.size-img{
+	height: 250px;
+	width: 300px;
 	margin: auto;
 }
 .mb-0{
